--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "csurf": "^1.11.0",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
     "firebase-admin": "^8.10.0"
   },
   "scripts": {
